support spark submit command